upgrade web to figwheel-main

--- a/web/.gitignore
+++ b/web/.gitignore
@@ -1,20 +1,13 @@
-*.class
-*.jar
-!/repo/**/*.jar
 /.lein-*
-/.cljs_rhino_repl/
 /.nrepl-port
+/.rebel_readline_history
 /.repl
-/checkouts/
-/classes/
 /lib/
 log
 /out/
 /resources/public/js/**
 /target/
 figwheel_server.log
-pom.xml
-pom.xml.asc
 \#*\#
 .\#*
 .settings
